//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "Reward.proto";

package com.lvl6.proto;

option java_outer_classname = "MiniEventProtos";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message MiniEventProto {
     optional int32 miniEventId = 1;
     optional int64 miniEventStartTime = 2;
     optional int64 miniEventEndTime = 3;
     
     optional MiniEventForPlayerLevelProto lvlEntered = 4;
     repeated MiniEventGoalProto goals = 5;
     repeated MiniEventLeaderboardRewardProto leaderboardRewards = 6;
     
     optional string name = 7;
     optional string desc = 8;
     optional string img = 9;
     optional string icon = 10;
}

//------------------------------------------------------------------------------------------

message MiniEventGoalProto {
	optional int32 miniEventGoalId = 1;
	optional int32 miniEventId = 2;
	optional MiniEventGoalType goalType = 3 [default = NO_GOAL];
	optional int32 goalAmt = 4;
	optional string goalDesc = 5;
	optional int32 pointsGained = 6;
	optional string actionDescription = 7;
	
	
	enum MiniEventGoalType {
		NO_GOAL = 1;
		
		GAIN_BUILDING_STRENGTH = 2;
		GAIN_RESEARCH_STRENGTH = 3;

		SPIN_BASIC_GRAB = 4;
		SPIN_ULTIMATE_GRAB = 5;
		SPIN_MULTI = 23;

		ENHANCE_COMMON = 6;
		ENHANCE_RARE = 7;
		ENHANCE_SUPER = 8;
		ENHANCE_ULTRA = 9;
		ENHANCE_EPIC = 10;

		CLAN_HELP = 11;
		CLAN_DONATE = 12;
		SEND_CLAN_GIFT = 38;

		BATTLE_AVENGE_REQUEST = 13;
		BATTLE_AVENGE_WIN = 14;
		BATTLE_REVENGE_WIN = 15;

		STEAL_CASH = 16;
		STEAL_OIL = 17;

		PVP_CATCH_COMMON = 18;
		PVP_CATCH_RARE = 19;
		PVP_CATCH_SUPER = 20;
		PVP_CATCH_ULTRA = 21;
		PVP_CATCH_EPIC = 22;
		
		//SPIN_MULTI = 23;
		
		GAIN_ENHANCE_STRENGTH = 24; // Doesn't include strength from leveling up a cake kid
		GAIN_ENHANCE_STRENGTH_FROM_CAKE_KID = 25;
		ENHANCE_CAKE_KID_FEEDER = 26;
		GAIN_EVOLUTION_STRENGTH = 27;
		
		PVP_WIN_AGAINST_BRONZE = 28;
		PVP_WIN_AGAINST_SILVER = 29;
		PVP_WIN_AGAINST_GOLD = 30;
		PVP_WIN_AGAINST_PLATINUM = 31;
		PVP_WIN_AGAINST_DIAMOND = 32;
		
		COMPLETE_COMMON_JOB = 33;
		COMPLETE_RARE_JOB = 34;
		COMPLETE_SUPER_JOB = 35;
		COMPLETE_ULTRA_JOB = 36;
		COMPLETE_EPIC_JOB = 37;
		
		//SEND_CLAN_GIFT = 38;

		USE_HEALTH_POTION_IN_PVP = 39;
		USE_CHILL_ANTIDOTE_IN_PVP = 40;
		USE_POISON_ANTIDOTE_IN_PVP = 41;
		USE_ORB_HAMMER_IN_PVP = 42;
		USE_HAND_SWAP_IN_PVP = 43;
		USE_BOARD_SHUFFLE_IN_PVP = 44;
		USE_PUTTY_IN_PVP = 45;
	} 
}

//------------------------------------------------------------------------------------------

message MiniEventForPlayerLevelProto {
	optional int32 mefplId = 1;
	optional int32 miniEventId = 2;
	//inclusive
	optional int32 playerLvlMin = 3;
	//inclusive
	optional int32 playerLvlMax = 4;
	optional int32 tierOneMinPts = 5;
	optional int32 tierTwoMinPts = 6;
	optional int32 tierThreeMinPts = 7;
	
     repeated MiniEventTierRewardProto rewards = 8;
	
}

//------------------------------------------------------------------------------------------

message MiniEventTierRewardProto {
	optional int32 metrId = 1;
	optional int32 mefplId = 2;
	optional RewardProto rewardProto = 3;
	//tier one, two, or three
	optional int32 tierLvl = 4;
}

//------------------------------------------------------------------------------------------

message MiniEventLeaderboardRewardProto {
	optional int32 melrId = 1;
	optional int32 miniEventId = 2;
	optional RewardProto rewardProto = 3;
	//minimum position (inclusive)
	optional int32 leaderboardMinPos = 4;
}

//------------------------------------------------------------------------------------------

message UserMiniEventProto {
	optional int32 miniEventId = 1;
	optional int32 miniEventTimetableId = 9;
	
    optional string userUuid = 2;
    //what the user's level is when mini event starts
	optional int32 userLvl = 3; 
	optional bool tierOneRedeemed = 4;
	optional bool tierTwoRedeemed = 5;
	optional bool tierThreeRedeemed = 6;
	
	optional MiniEventProto miniEvent = 7;
	repeated UserMiniEventGoalProto goals = 8;
	
	//optional int32 miniEventTimetableId = 9; defined above
}

//------------------------------------------------------------------------------------------

message UserMiniEventGoalProto {
	optional string userUuid = 1;
	optional int32 miniEventGoalId = 2;
	optional int32 progress = 3;
	optional int32 miniEventTimetableId = 4;
}

//------------------------------------------------------------------------------------------
